--- a/template-menu/index.html
+++ b/template-menu/index.html
@@ -55,14 +55,87 @@
 			</div>					
 		</div>
 		<ul class="nav-list">
-			<li><a href="#"><span>Arquivo</span></a></li>
-			<li><a href="#"><span>Gestão de Compras</span></a></li>
-			<li><a href="#"><span>Gestão Financeira</span></a></li>
-			<li><a href="#"><span>Gestão de Produtos</span></a></li>
-			<li><a href="#"><span>Contabilidade</span></a></li>
-			<li><a href="#"><span>Assesor Gerencial</span></a></li>
-			<li><a href="#"><span>Utilitários</span></a></li>
-			<li><a href="#"><span>Relatórios</span></a></li>
+			<li>
+				<input type="checkbox" id="arquivo" name=""><a href="#"><label for="arquivo">Arquivo</label></a>
+				<div class="checkbox-wrapper">
+					<ul class="check-nav">
+						<li><a href="#">Pessoas</a></li>
+						<li><a href="#">Produtos</a></li>
+						<li><a href="#">Financeiros</a></li>
+						<li><a href="#">Básico</a></li>						
+					</ul>
+				</div>
+			</li>
+			<li>
+				<input type="checkbox" id="compras" name=""><a href="#"><label for="compras">Gestão de Compras</label></a>
+				<div class="checkbox-wrapper">
+					<ul class="check-nav">
+						<li><a href="#">Entrada</a></li>
+						<li><a href="#">Devolução</a></li>					
+					</ul>
+				</div>
+			</li>
+			<li>
+				<input type="checkbox" id="financeiro" name=""><a href="#"><label for="financeiro">Gestão Financeira</label></a>
+				<div class="checkbox-wrapper">
+					<ul class="check-nav">
+						<li><a href="#">Contas</a></li>
+						<li><a href="#">Caixa/Banco</a></li>
+						<li><a href="#">Gerencial</a></li>						
+					</ul>
+				</div>
+			</li>
+			<li>
+				<input type="checkbox" id="produtos" name=""><a href="#"><label for="produtos">Gestão de Produtos</label></a>
+				<div class="checkbox-wrapper">
+					<ul class="check-nav">
+						<li><a href="#">Extratos</a></li>
+						<li><a href="#">Estoque</a></li>
+						<li><a href="#">Preço</a></li>						
+						<li><a href="#">Promoção</a></li>						
+					</ul>
+				</div>
+			</li>
+			<li>
+				<input type="checkbox" id="contabilidade" name=""><a href="#"><label for="contabilidade">Contabilidade</label></a>
+				<div class="checkbox-wrapper">
+					<ul class="check-nav">
+						<li><a href="#">Contas</a></li>
+						<li><a href="#">Caixa/Banco</a></li>
+						<li><a href="#">Gerencial</a></li>						
+					</ul>
+				</div>
+			</li>
+			<li>
+				<input type="checkbox" id="gerencial" name=""><a href="#"><label for="gerencial">Assesor Gerencial</label></a>
+				<div class="checkbox-wrapper">
+					<ul class="check-nav">
+						<li><a href="#">Contas</a></li>
+						<li><a href="#">Caixa/Banco</a></li>
+						<li><a href="#">Gerencial</a></li>						
+					</ul>
+				</div>
+			</li>
+			<li>
+				<input type="checkbox" id="utilitario" name=""><a href="#"><label for="utilitario">Utilitários</label></a>
+				<div class="checkbox-wrapper">
+					<ul class="check-nav">
+						<li><a href="#">Contas</a></li>
+						<li><a href="#">Caixa/Banco</a></li>
+						<li><a href="#">Gerencial</a></li>						
+					</ul>
+				</div>
+			</li>
+			<li>
+				<input type="checkbox" id="relatorio" name=""><a href="#"><label for="relatorio">Relatórios</label></a>
+				<div class="checkbox-wrapper">
+					<ul class="check-nav">
+						<li><a href="#">Contas</a></li>
+						<li><a href="#">Caixa/Banco</a></li>
+						<li><a href="#">Gerencial</a></li>						
+					</ul>
+				</div>
+			</li>
 		</ul>					
 	</div>
 
