Fase de apresentação pronta

--- a/template-menu/index.html
+++ b/template-menu/index.html
@@ -56,11 +56,16 @@
 		</div>
 		<ul class="nav-list">
 			<li>
-				<input type="checkbox" id="arquivo" name=""><a href="#"><label for="arquivo">Cadastro</label></a>
+				<input type="checkbox" id="arquivo" name="">
+					<a href="#">
+						<label for="arquivo">
+							<i class="fa fa-pencil-square-o" aria-hidden="true"></i> Cadastro <i class="fa fa-sort-desc direita" aria-hidden="true"></i>
+						</label>
+					</a>
 				<div class="checkbox-wrapper">
 					<ul class="check-nav">
 						<li>
-							<a href="#">Pessoas</a>
+							<a href="#">Pessoas <i class="fa fa-caret-right direita" aria-hidden="true"></i></a>
 							<div class="etiqueta">
 								<ul>
 									<li><a href="#">Pessoas</a></li>
@@ -69,7 +74,7 @@
 							</div>
 						</li>
 						<li>
-							<a href="#">Produtos</a>
+							<a href="#">Produtos <i class="fa fa-caret-right direita" aria-hidden="true"></i></a>
 							<div class="etiqueta">
 								<ul>
 									<li><a href="#">Produtos</a></li>
@@ -80,7 +85,7 @@
 							</div>
 						</li>
 						<li>
-							<a href="#">Usuários</a>
+							<a href="#">Usuários <i class="fa fa-caret-right direita" aria-hidden="true"></i></a>
 							<div class="etiqueta">
 								<ul>
 									<li><a href="#">Usuários</a></li>
@@ -90,7 +95,7 @@
 						</li>
 						<li><a href="#">Grupo Empresas</a></li>
 						<li>
-							<a href="#">Financeiros</a>
+							<a href="#">Financeiros <i class="fa fa-caret-right direita" aria-hidden="true"></i></a>
 							<div class="etiqueta">
 								<ul>
 									<li><a href="#">Forma Pagamento</a></li>
@@ -105,7 +110,12 @@
 				</div>
 			</li>
 			<li>
-				<input type="checkbox" id="compras" name=""><a href="#"><label for="compras">Gestão de Compras</label></a>
+				<input type="checkbox" id="compras" name="">
+				<a href="#">
+					<label for="compras">
+						<i class="fa fa-cart-plus" aria-hidden="true"></i> Gestão de Compras <i class="fa fa-sort-desc direita" aria-hidden="true"></i>
+					</label>
+				</a>
 				<div class="checkbox-wrapper">
 					<ul class="check-nav">
 						<li><a href="#">Entrada</a></li>					
@@ -113,7 +123,12 @@
 				</div>
 			</li>
 			<li>
-				<input type="checkbox" id="financeiro" name=""><a href="#"><label for="financeiro">Gestão Financeira</label></a>
+				<input type="checkbox" id="financeiro" name="">
+				<a href="#">
+					<label for="financeiro">
+						<i class="fa fa-line-chart" aria-hidden="true"></i> Gestão Financeira <i class="fa fa-sort-desc direita" aria-hidden="true"></i>
+					</label>
+				</a>
 				<div class="checkbox-wrapper">
 					<ul class="check-nav">
 						<li><a href="#">Contas Pagar</a></li>
@@ -127,7 +142,12 @@
 				</div>
 			</li>
 			<li>
-				<input type="checkbox" id="produtos" name=""><a href="#"><label for="produtos">Gestão de Produtos</label></a>
+				<input type="checkbox" id="produtos" name="">
+				<a href="#">
+					<label for="produtos">
+						<i class="fa fa-shopping-basket" aria-hidden="true"></i> Gestão de Produtos <i class="fa fa-sort-desc direita" aria-hidden="true"></i>
+					</label>
+				</a>
 				<div class="checkbox-wrapper">
 					<ul class="check-nav">
 						<li><a href="#">Ajustes</a></li>
@@ -136,7 +156,12 @@
 				</div>
 			</li>
 			<li>
-				<input type="checkbox" id="contabilidade" name=""><a href="#"><label for="contabilidade">Contabilidade</label></a>
+				<input type="checkbox" id="contabilidade" name="">
+				<a href="#">
+					<label for="contabilidade">
+						<i class="fa fa-calculator" aria-hidden="true"></i> Contabilidade <i class="fa fa-sort-desc direita" aria-hidden="true"></i>
+					</label>
+				</a>
 				<div class="checkbox-wrapper">
 					<ul class="check-nav">
 						<li><a href="#">Documentos Emitidos</a></li>
@@ -146,7 +171,12 @@
 				</div>
 			</li>
 			<li>
-				<input type="checkbox" id="gerencial" name=""><a href="#"><label for="gerencial">Assesor Gerencial</label></a>
+				<input type="checkbox" id="gerencial" name="">
+				<a href="#">
+					<label for="gerencial">
+						<i class="fa fa-users" aria-hidden="true"></i> Assesor Gerencial <i class="fa fa-sort-desc direita" aria-hidden="true"></i>
+					</label>
+				</a>
 				<div class="checkbox-wrapper">
 					<ul class="check-nav">
 						<li><a href="#">Ranking de Vendas</a></li>						
@@ -154,10 +184,15 @@
 				</div>
 			</li>
 			<li>
-				<a href="#"><label for="utilitario">Utilitários</label></a>
+				<a href="#"><label for="utilitario"><i class="fa fa-wrench" aria-hidden="true"></i> Utilitários</label></a>
 			</li>
 			<li>
-				<input type="checkbox" id="relatorio" name=""><a href="#"><label for="relatorio">Relatórios</label></a>
+				<input type="checkbox" id="relatorio" name="">
+				<a href="#">
+					<label for="relatorio">
+						<i class="fa fa-pie-chart" aria-hidden="true"></i> Relatórios <i class="fa fa-sort-desc direita" aria-hidden="true"></i>
+					</label>
+				</a>
 				<div class="checkbox-wrapper">
 					<ul class="check-nav">
 						<li><a href="#">Compras</a></li>
