--- a/template-menu/index.html
+++ b/template-menu/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style-responsive.css">
 </head>
 <body>
 
@@ -222,11 +223,33 @@
 				</div>
 			</div>				
 		</div>
-		<div class="conteudo">
-			<h1>Aqui vai as informações</h1>
+		<div class="section conteudo">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 grafico">
+						Aqui vai o gráfico
+					</div>
+					<div class="col-md-6 grafico">
+						Aqui vai o gráfico
+					</div>
+					<div class="col-md-6 grafico">
+						Aqui vai o gráfico
+					</div>
+					<div class="col-md-6 grafico">
+						Aqui vai o gráfico
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="footer">
-			<p><span>Mac’Sistem</span> Symac © 2017</p>
+		<div class="section">
+			<div class="container">
+				<div class="row">
+					<div class="footer">
+						<p><span>Mac’Sistem</span> Symac © 2017</p>
+					</div>
+					
+				</div>
+			</div>	
 		</div>
 	</div>
 
