--- a/template-menu/index.html
+++ b/template-menu/index.html
@@ -46,7 +46,8 @@
 	</div>
 
 <!--Início da SidBar-->
-
+<input type="checkbox" id="responsivo" name=""><label id="responsivo-icon" for="responsivo"><i class="fa fa-bars" aria-hidden="true"></i></label>
+<div class="chek-sid">
 	<div class="sidbar">
 		<div class="icon-top">
 			<div class="sidbar-pequenos-icones">
@@ -205,6 +206,7 @@
 			</li>
 		</ul>					
 	</div>
+</div>
 
 <!--Início do Container-->
 
